# AudiobookCreator-Packages

./: README.md  REPO_README.md
defaults/: source_config.json
native/: AudiobookCreator.Native.sln
native/App.Core/: App.Core.csproj
native/App.Diagnostics/: App.Diagnostics.csproj  SystemProbe.cs  SystemProfile.cs
native/App.Inference/: ApiBackend.cs  App.Inference.csproj  ChatterboxOnnxBackend.cs  ChatterboxPythonBackend.cs  ITtsBackend.cs  InferenceOptions.cs  KittenPythonBackend.cs  KittenTtsOnnxBackend.cs  LocalDllBackend.cs  LocalInferenceOptions.cs  OnnxModelRuntime.cs  Qwen3OnnxDllBackend.cs  Qwen3OnnxSplitBackend.cs  QwenEmbeddedRuntime.cs  QwenPythonBackend.cs  QwenTokenCounter.cs  TtsRequest.cs
native/App.Setup/: App.Setup.csproj  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
native/App.Setup.NetFx/: App.Setup.NetFx.csproj  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
native/App.SetupLauncher/: AudiobookCreatorSetupLauncher.cpp  AudiobookCreatorSetupLauncher.rc
native/App.Storage/: ApiSecretStore.cs  App.Storage.csproj  HuggingFaceModelDownloader.cs  JsonConfigStore.cs  JsonProjectStore.cs  ModelDownloadTelemetry.cs  RuntimePaths.cs
native/App.UI/: App.UI.csproj  App.UI_m01r0gbv_wpftmp.csproj  App.xaml  App.xaml.cs  AppFeatureFlags.cs  AudioEnhancePrepWindow.xaml  AudioEnhancePrepWindow.xaml.cs  FirstRunSetupWindow.xaml  FirstRunSetupWindow.xaml.cs  MainWindow.AudioEnhance.cs  MainWindow.xaml  MainWindow.xaml.cs  ReleaseIntegrityVerifier.cs  (+7 more)
native/native_tts_engine/: CMakeLists.txt  native_tts_engine.c
(+55 files in other folders)
